--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,7 +1,23 @@
 {
 	"comments": {
 		"lineComment": "//",
-		"blockComment": ["/*", "*/"]
-	  },
-		"brackets": [["{", "}"], ["[", "]"], ["(", ")"]],
+		"blockComment": [
+			"/*",
+			"*/"
+		]
+	},
+	"brackets": [
+		[
+			"{",
+			"}"
+		],
+		[
+			"[",
+			"]"
+		],
+		[
+			"(",
+			")"
+		]
+	]
 }
