--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"Snippets"
 	],
 	"activationEvents": [
-		"onCommand:extension.helloWorld"
+		"onLanguage:rapid"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
